--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:1094958669148:ios:1f7930f4016a3212e93599",
-  "FIREBASE_PROJECT_ID": "my-prject-nazari",
-  "GCM_SENDER_ID": "1094958669148"
+  "GOOGLE_APP_ID": "1:628256163112:ios:2d57c357385c844a3bbc1d",
+  "FIREBASE_PROJECT_ID": "movi-chi",
+  "GCM_SENDER_ID": "628256163112"
 }
