--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: movie_chi
 description: a movies app with movie chi
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.3.51-release+51
+version: 1.3.52-release+52
 
 environment:
   sdk: ">=2.17.3 <4.0.0"
@@ -82,7 +82,8 @@ dependencies:
   google_sign_in: ^6.1.5
   easy_loading_button: ^0.3.2
   confetti: ^0.7.0
-  need_resume: ^1.0.7+1
+  flutter_html: 
+  html: ^0.15.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
