--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: movie_chi
 description: a movies app with movie chi
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.3.52-release+52
+version: 1.3.54-release+54
 
 environment:
   sdk: ">=2.17.3 <4.0.0"
@@ -70,7 +70,7 @@ dependencies:
   firebase_core: ^2.18.0
   firebase_messaging: ^14.6.5
   platform_local_notifications: ^0.0.4
-  google_mobile_ads: ^3.0.0
+  # google_mobile_ads: ^3.0.0
   pinch_zoom: ^1.0.0
   icons_plus: ^4.0.0
   package_info_plus: ^4.1.0
