--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: movie_chi
 description: a movies app with movie chi
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.3.54-release+54
+version: 1.3.56-release+56
 
 environment:
   sdk: ">=2.17.3 <4.0.0"
@@ -21,7 +21,7 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_cached_video_player: ^2.0.5
   get: ^4.6.5
-  url_launcher: ^6.1.11
+  url_launcher: ^6.2.1
   dropdown_button2: ^1.6.3
   lottie: ^1.4.3
   http: ^1.1.0
@@ -44,7 +44,7 @@ dependencies:
   carousel_slider:
   persian_number_utility: ^1.1.2
   fluttertoast: ^8.1.1
-  flutter_svg: ^2.0.4
+  # flutter_svg: ^2.0.4
   device_info_plus: ^8.1.0
   platform_device_id: ^1.0.1
   visibility_detector: 
@@ -83,7 +83,7 @@ dependencies:
   easy_loading_button: ^0.3.2
   confetti: ^0.7.0
   flutter_html: 
-  html: ^0.15.4
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -116,7 +116,26 @@ flutter:
   fonts:
     - family: vazir
       fonts:
-        - asset: assets/fonts/vazir.ttf
+        - asset: assets/fonts/Vazirmatn-Medium.ttf
+          weight: 500
+          
+        - asset: assets/fonts/Vazirmatn-Bold.ttf
+          weight: 700
+          
+        - asset: assets/fonts/Vazirmatn-Light.ttf
+          weight: 300
+          
+        - asset: assets/fonts/Vazirmatn-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Vazirmatn-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Vazirmatn-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Vazirmatn-ExtraLight.ttf
+          weight: 200
+        
+
+
         
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
