--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,10 @@ dependencies:
   easy_loading_button: ^0.3.2
   confetti: ^0.7.0
   flutter_html: 
+  media_kit: ^1.1.10                             # Primary package.
+  media_kit_video: ^1.2.4                        # For video rendering.
+  media_kit_libs_video: ^1.0.4                   # Native video dependencies.          # Native video dependencies.
+
   
 dev_dependencies:
   flutter_test:
