--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,11 +51,11 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   pinput:
   share_plus: ^7.1.0
-  flutter_meedu_videoplayer: 
-    git: 
-      url: https://github.com/zezo357/flutter_meedu_videoplayer.git
-      ref: 368702e0298089e714164fe0c3ba9b45463965ed
-      path: package/
+  # flutter_meedu_videoplayer: 
+  #   git: 
+  #     url: https://github.com/zezo357/flutter_meedu_videoplayer.git
+  #     ref: 368702e0298089e714164fe0c3ba9b45463965ed
+  #     path: package/
   uni_links: ^0.5.1
   pull_to_refresh_flutter3: ^2.0.1
   swipeable_page_route: ^0.3.1
