--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: movie_chi
 description: a movies app with movie chi
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.3.58-release+58
+version: 1.3.60-release+60
 
 environment:
   sdk: ">=2.17.3 <4.0.0"
@@ -64,9 +64,9 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.0.15
   permission_handler: ^10.4.3
-  universal_html: 
+  # universal_html: 
   badges: ^3.1.1
-  image_gallery_saver: ^2.0.2
+  # image_gallery_saver: ^2.0.2
   firebase_core: ^2.18.0
   firebase_messaging: ^14.6.5
   platform_local_notifications: ^0.0.4
@@ -82,7 +82,6 @@ dependencies:
   google_sign_in: ^6.1.5
   easy_loading_button: ^0.3.2
   confetti: ^0.7.0
-  flutter_html: 
   media_kit: ^1.1.10                             # Primary package.
   media_kit_video: ^1.2.4                        # For video rendering.
   media_kit_libs_video: ^1.0.4                   # Native video dependencies.          # Native video dependencies.
