--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -72,7 +72,17 @@
                     <data android:host="cinimo.ir" />
                 </intent-filter>
               <!-- App Links -->
-                
+              <intent-filter android:autoVerify="true">
+                    <action android:name="android.intent.action.VIEW" />
+                    <category android:name="android.intent.category.DEFAULT" />
+                    <category android:name="android.intent.category.BROWSABLE" />
+                    <!-- Accepts URIs that begin with https://YOUR_HOST -->
+                    <data
+                    android:scheme="app"
+                    
+                android:host="deeplink.movie.chi" />
+                </intent-filter>
+                 
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
