--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   media_kit_video: ^1.2.4                        # For video rendering.
   media_kit_libs_video: ^1.0.4                   # Native video dependencies.          # Native video dependencies.
   gap: ^3.0.1
+  flutter_dotenv: ^5.1.0
 
   
 dev_dependencies:
@@ -104,6 +105,7 @@ flutter:
     - assets/lotties/
     - assets/images/
     - assets/local.db
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
