--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   flutter_image_slideshow: ^0.1.2
   cached_network_image: ^3.2.1
-  flutter_cached_video_player: ^2.0.5
   get: ^4.6.5
   url_launcher: ^6.2.1
   dropdown_button2: ^1.6.3
@@ -87,6 +86,7 @@ dependencies:
   media_kit_libs_video: ^1.0.4                   # Native video dependencies.          # Native video dependencies.
   gap: ^3.0.1
   flutter_dotenv: ^5.1.0
+  flutter_animate: ^4.5.0
 
   
 dev_dependencies:
