--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: movie_chi
 description: a movies app with movie chi
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.3.86-release+68
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
+version: 1.3.70-release+70
 
 environment:
   sdk: ">=2.17.3 <4.0.0"
@@ -10,6 +10,9 @@ dependencies:
     sdk: flutter
 
   sqflite:
+  flutter_image_compress: ^2.3.0
+  image_picker: ^1.0.7
+
   visibility_aware_state: ^1.0.5
   flutter_archive: ^5.0.0
   flutter_typeahead: ^4.6.2
@@ -21,7 +24,7 @@ dependencies:
   cached_network_image: ^3.2.1
   get: ^4.6.5
   url_launcher: ^6.2.1
-  dropdown_button2: ^1.6.3
+  # dropdown_button2: ^1.6.3
   lottie: ^1.4.3
   http: ^1.1.0
   pod_player: ^0.2.1
@@ -38,7 +41,7 @@ dependencies:
   status_bar_control: ^3.2.1
   iconsax: ^0.0.8
   adaptive_theme: ^3.1.1
-  salomon_bottom_bar: ^3.3.1 
+  salomon_bottom_bar: ^3.3.1
   shimmer: ^2.0.0
   carousel_slider:
   persian_number_utility: ^1.1.2
@@ -46,12 +49,12 @@ dependencies:
   # flutter_svg: ^2.0.4
   device_info_plus: ^8.1.0
   platform_device_id: ^1.0.1
-  visibility_detector: 
+  visibility_detector:
   loading_animation_widget: ^1.2.0+4
   pinput:
   share_plus: ^7.1.0
-  # flutter_meedu_videoplayer: 
-  #   git: 
+  # flutter_meedu_videoplayer:
+  #   git:
   #     url: https://github.com/zezo357/flutter_meedu_videoplayer.git
   #     ref: 368702e0298089e714164fe0c3ba9b45463965ed
   #     path: package/
@@ -63,7 +66,7 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.0.15
   permission_handler: ^10.4.3
-  # universal_html: 
+  # universal_html:
   badges: ^3.1.1
   # image_gallery_saver: ^2.0.2
   firebase_core: ^2.18.0
@@ -81,21 +84,19 @@ dependencies:
   google_sign_in: ^6.1.6
   easy_loading_button: ^0.3.2
   confetti: ^0.7.0
-  media_kit: ^1.1.10                             # Primary package.
-  media_kit_video: ^1.2.4                        # For video rendering.
-  media_kit_libs_video: ^1.0.4                   # Native video dependencies.          # Native video dependencies.
+  media_kit: ^1.1.10 # Primary package.
+  media_kit_video: ^1.2.4 # For video rendering.
+  media_kit_libs_video: ^1.0.4 # Native video dependencies.          # Native video dependencies.
   gap: ^3.0.1
   flutter_dotenv: ^5.1.0
   flutter_animate: ^4.5.0
 
-  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   floor_generator: ^1.4.2
-  build_runner: ^2.1.2 
-
+  build_runner: ^2.1.2
 
 flutter:
   uses-material-design: true
@@ -124,13 +125,13 @@ flutter:
       fonts:
         - asset: assets/fonts/Vazirmatn-Medium.ttf
           weight: 500
-          
+
         - asset: assets/fonts/Vazirmatn-Bold.ttf
           weight: 700
-          
+
         - asset: assets/fonts/Vazirmatn-Light.ttf
           weight: 300
-          
+
         - asset: assets/fonts/Vazirmatn-Thin.ttf
           weight: 100
         - asset: assets/fonts/Vazirmatn-Black.ttf
@@ -139,10 +140,15 @@ flutter:
           weight: 800
         - asset: assets/fonts/Vazirmatn-ExtraLight.ttf
           weight: 200
-        
 
+    - family: peyda
+      fonts:
+        - asset: assets/fonts/Peyda-Regular.ttf
+          weight: 400
 
-        
+        - asset: assets/fonts/Peyda-Bold.ttf
+          weight: 700
+
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
@@ -153,5 +159,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
-
