--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ dependencies:
   gap: ^3.0.1
   flutter_dotenv: ^5.1.0
   flutter_animate: ^4.5.0
+  device_apps: ^2.2.0
 
 dev_dependencies:
   flutter_test:
