--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,8 +78,7 @@ dependencies:
   icons_plus: ^4.0.0
   package_info_plus: ^4.1.0
   wakelock_plus: ^1.1.1
-  flutter_screenutil: ^5.8.4
-  appcheck: ^1.0.6
+  # appcheck: ^1.0.6
   preload_page_view: ^0.2.0
   firebase_auth: ^5.1.2
   google_sign_in: ^6.1.6
@@ -92,6 +91,9 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_animate: ^4.5.0
   device_apps: ^2.2.0
+
+  # new------------------------
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
