--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 GITHUB_URL = "https://raw.githubusercontent.com/mosbahsofttechnology/cinimo/main/config.txt"
 GITHUB_AD  = "https://raw.githubusercontent.com/mosbahsofttechnology/cinimo-ad/main/ad.php"
 CONST_URL = "https://api.cinimo.ir"
-APP_ACCESS = "true"
+APP_ACCESS = "false"
