--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,4 @@ org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.jvmargs=-Xms1024m -Xmx4096m
+dev.steenbakker.mobile_scanner.useUnbundled=true
