--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: movie_chi
 description: a movies app with movie chi
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 1.3.78-release+78
+version: 1.3.83-release+83
 
 environment:
   sdk: ">=2.17.3 <4.0.0"
@@ -49,7 +49,7 @@ dependencies:
   # flutter_svg: ^2.0.4
   device_info_plus: ^10.1.2
   platform_device_id: ^1.0.1
-  visibility_detector:
+  visibility_detector: ^0.4.0+2
   loading_animation_widget: ^1.2.0+4
   pinput:
   share_plus: ^7.1.0
@@ -91,6 +91,11 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_animate: ^4.5.0
   device_apps: ^2.2.0
+  link_text: ^0.2.1
+
+  qr_flutter: ^4.1.0
+  firebase_crashlytics: ^4.1.3
+  ai_barcode_scanner: ^6.0.1
 
 dev_dependencies:
   flutter_test:
